--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
 
   <body>
+    <div class="door-row">
+      <img id="door1" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+      <img id="door2" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+      <img id="door3" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+    </div>
 
+
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
