--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
     </table>
 
     <div class="door-row">
-      <img id="door1" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
-      <img id="door2" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
-      <img id="door3" class='door-frame' src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+      <img id="door1" class="door-frame" src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+      <img id="door2" class="door-frame" src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
+      <img id="door3" class="door-frame" src="https://content.codecademy.com/projects/chore-door/images/closed_door.svg">
     </div>
 
+    <div id="start" class="start-row">Good luck!</div>
 
     <script type="text/javascript" src="script.js"></script>
   </body>
